插件下载不了
插件下载-composer install

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 /nbproject/private/
 /backend/views/layouts/main_1.php
+/vendor/
+
+nbproject/project.properties
+
+nbproject/project.xml
+
+composer.lock
